changed nav bar color and fixed spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,7 +36,7 @@ ul {
 #prev, #next{
 	margin-top: 20px;
 }
-.navbar{
+.nav-custom{
 	margin-bottom: 25px;
-	
+	background-color: #1f2833;
 }
